modify the managment.article to repo

--- a/detail.html
+++ b/detail.html
@@ -21,7 +21,7 @@
         <main class="detail clearfix">
             <header>
                 <div id="logo" class="logo">
-                    <img src="" alt="logo 图片">
+                     <img src="image/logo.png" alt="logo 图片">
                 </div>
                 <!--use ajax to search data from server  -->
                 <div id="search" class="co-search">
