--- a/mamagment.article.html
+++ b/mamagment.article.html
@@ -18,7 +18,7 @@
         <script type="text/javascript" src="js/component.js"></script>
         <!--need font awesome  -->
     </head>
-    <body style="background:#f7f7f7">
+    <body style="background:#f7f7f7;font-size:16px !important">
         <main class="managment">
             <aside class="toolbar">
                 <div class="logo item">
